add back author?

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,9 @@ layout: base
         <time class="dt-modified" datetime="{{ mdate }}" itemprop="dateModified">
           {{ mdate | date: date_format }}
         </time>
-      {%- endif -%}</p>
+      {%- endif -%}
+      &bull; Noam Sain
+    </p>
   </header>
 
     <div class="post-content e-content" itemprop="articleBody">
