--- a/_sass/minima/skins/auto.scss
+++ b/_sass/minima/skins/auto.scss
@@ -256,7 +256,7 @@ $table-border-color: $lm-table-border-color;
 
     --minima-border-color-01: #{$lm-border-color-01};
     --minima-border-color-02: #{$lm-border-color-02};
-    --minima-border-color-03: #ddddcc;
+    --minima-border-color-03: #{$lm-border-color-03};
 
     --minima-table-text-color: #{$lm-table-text-color};
     --minima-table-zebra-color: #{$lm-table-zebra-color};
