--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,1 +1,3 @@
 // Placeholder to allow overriding predefined variables smoothly.
+$lm-border-color-01:       #ddddcc;
+$lm-border-color-03:       #ddddcc;
