--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,3 +1,2 @@
 // Placeholder to allow overriding predefined variables smoothly.
-$lm-border-color-01:       #ddddcc;
-$lm-border-color-03:       #ddddcc;
+$minima-border-color-03:       #ddddcc;
