--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,2 +1,2 @@
 // Placeholder to allow overriding predefined variables smoothly.
-$minima-border-color-03:       #ddddcc;
+--minima-border-color-03:       #ddddcc;
