--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <footer class="site-footer h-card">
-	<data class="u-url" href="{{ " /" | relative_url }}"></data>
 	<div class="wrapper">
 		<div class="footer-col-wrapper">
-			<div class="footer-col"></div>
+			<div class="footer-col">
+				[Archives]({% link archives.md %})
+			</div>
 			<div class="footer-col">
 				<p>
 					{{ site.description | escape }}
