--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,9 @@
 	<div class="wrapper">
 		<div class="footer-col-wrapper">
 			<div class="footer-col">
-				[Archives]({% link archives.md %})
+				<p>
+					[Archives]({% link archives.md %})
+				</p>
 			</div>
 			<div class="footer-col">
 				<p>
@@ -10,6 +12,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="social-links"></div>
+		<div class="social-links">
+		</div>
 	</div>
 </footer>
