--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 		<div class="footer-col-wrapper">
 			<div class="footer-col">
 				<p>
-					[Archives]({% link archives.md %})
+					<a href="/archives.html">Archives</a>
 				</p>
 			</div>
 			<div class="footer-col">
@@ -11,8 +11,6 @@
 					{{ site.description | escape }}
 				</p>
 			</div>
-		</div>
-		<div class="social-links">
 		</div>
 	</div>
 </footer>
