--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,9 @@ layout: base
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <p class="post-meta">
+      Posted by Noam Sain
+    </p>
   </header>
 
     <div class="post-content e-content" itemprop="articleBody">
