--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: base
         <li>
             <h3>
                 <a class="post-link" href="{{ post.url | relative_url }}">
-                    {{ post.title | escape }}
+                    {{ post.title | smartify }}
                 </a>
             </h3>
             {%- if site.show_excerpts -%}
