--- a/_includes/search-lunr.html
+++ b/_includes/search-lunr.html
@@ -10,7 +10,7 @@
     var documents = [{% for page in site.posts %}{
         "id": {{ counter }},
         "url": "{{ site.url }}{{ page.url }}",
-        "title": "{{ page.title }}",
+        "title": "{{ page.title | smartify }}",
         "body": "{{ page.content | markdownify | replace: '.', '. ' | replace: '</h2>', ': ' | replace: '</h3>', ': ' | replace: '</h4>', ': ' | replace: '</p>', ' ' | strip_html | strip_newlines | replace: '  ', ' ' | replace: '"', ' ' }}"{% assign counter = counter | plus: 1 %}
         }{% if forloop.last %}{% else %}, {% endif %}{% endfor %}];
 
@@ -41,7 +41,7 @@
                     document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML + "<li class='lunrsearchresult'><a href='" + url + "'><span class='title'>" + title + "</span><br /><span class='body'>"+ body +"</span></a></li>";
                 }
             } else {
-                document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found …</li>";
+                document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found ...</li>";
             }
         }
         return false;
