--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,37 +1,38 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
-blockquote .small, blockquote cite, blockquote footer, blockquote small {
+blockquote .small, blockquote cite, blockquote footer, blockquote small
+{
     display: block;
     font-size: 80%;
     line-height: 1.42857143;
-    color:#777
+	color: #777;
 }
 
-blockquote .small:before, blockquote cite:before, blockquote footer:before, blockquote small:before {
-    content: "\2014 \00A0"
-}
+blockquote .small:before, blockquote cite:before, blockquote footer:before, blockquote small:before { content: "\2014 \00A0"; }
 
-dt {
-	font-weight: bold;
-}
+dt { font-weight: bold; }
 
-dd {
+dd
+{
 	padding-left: 1em;
 	margin-bottom: 1em;
 }
 
-iframe {
-	margin-bottom: 1em;
-}
+iframe { margin-bottom: 1em; }
+q { quotes: "“" "”" "‘" "’"; }
+q::before { content: open-quote; }
+q::after { content: close-quote; }
 
-.img-responsive {
+.img-responsive
+{
     display: block;
     max-width: 100%;
-    height: auto
+	height: auto;
 }
 
-.pdf, .scribd_iframe_embed {
+.pdf, .scribd_iframe_embed
+{
     height: 600px;
 	width: 100%;
 }
